--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Free Windows RDP with Rufus + ISO
+name: Free Windows RDP
 
 on: workflow_dispatch
 
@@ -12,12 +12,6 @@ jobs:
           Set-ItemProperty -Path "HKLM:\System\CurrentControlSet\Control\Terminal Server" -Name "fDenyTSConnections" -Value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
           Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString "RDPpassword123" -AsPlainText -Force)
-      - name: Download Rufus
-        run: |
-          Invoke-WebRequest -Uri "https://github.com/pbatard/rufus/releases/latest/download/rufus-4.4.exe" -OutFile "$env:USERPROFILE\Desktop\rufus.exe"
-      - name: Download Windows 10 ISO
-        run: |
-          Invoke-WebRequest -Uri "https://software-download.microsoft.com/db/Win10_22H2_English_x64.iso" -OutFile "$env:USERPROFILE\Desktop\Windows10.iso"
       - name: Show Connection Details
         run: |
           ipconfig
@@ -25,6 +19,7 @@ jobs:
           Write-Host "Username: runneradmin"
           Write-Host "Password: RDPpassword123"
           Write-Host "====================="
+          Write-Host "Connect using Remote Desktop (mstsc) on your PC."
       - name: Keep Alive
         run: |
           Start-Sleep -Seconds 21600
